# Gallery-Recommender-PublicVer

./: DEMO_NOTICE.md  DockerFile  LICENSE  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
configs/: digital_data_etl_artomo.yaml
gallery_recommender/: settings.py
gallery_recommender/application/: demo_data.py  indexing.py
gallery_recommender/application/crawlers/: __init__.py  base.py  dispatcher.py  googledocs.py
gallery_recommender/application/deleters/: MongodbDeleter.py  QdrantDeleter.py  base.py  dispatcher.py  init.py
gallery_recommender/application/networks/: __init__.py  base.py  embeddings.py
gallery_recommender/application/preprocessing/: cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
gallery_recommender/application/preprocessing/operations/: __init__.py  clean_data.py
gallery_recommender/application/rag/: __init__.py  base.py  dispatcher.py  prompt_templates.py  reranking.py  retriever.py
gallery_recommender/application/utils/: __init__.py  misc.py
gallery_recommender/domain/: __init__.py  cleaned_data.py  data.py  embedded_cleaned_data.py  exceptions.py  inference.py  queries.py  types.py
gallery_recommender/domain/base/: __init__.py  nosql.py  vector.py
gallery_recommender/infrastructure/: data_service_api.py  inference_pipeline_api.py  opik_utils.py
gallery_recommender/infrastructure/db/: __init__.py  mongo.py  qdrant.py
gallery_recommender/infrastructure/gcp/deploy/: cloud_tasks.py  storage.py
gallery_recommender/model/inference/: __init__.py  chatgpt_inference.py  run.py
gallery_recommender/static/: stream.html
pipelines/: __init__.py  digital_data_etl.py  end_to_end.py  feature_engineering.py
steps/etl/: __init__.py  crawl_links.py  create_indices.py  delete.py
steps/feature_engineering/: __init__.py  clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
tools/: chatgpt_service.py  data_service.py  data_warehouse.py  exhibition_reports_service.py  ml_service.py  rag.py  run.py
